# cpswarm_msgs

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: Coverage.action  MoveTo.action  PathGeneration.action  PickAndPlace.action  RoiAssignment.action  RoiDivision.action  Takeoff.action  Target.action  TaskAllocation.action  TaskOrganization.action  Tracking.action
doc/html/action/: Empty.html  TaskAllocation.html
doc/html/msg/: ArrayOfVectors.html  TargetTracking.html  Velocity.html
doc/html/srv/: closest_bound.html  danger.html  fix_to_pose.html  get_area.html  get_gps_origin.html  get_origin.html  get_sector.html  out_of_bounds.html
docs/: manifest.yaml
docs/html/: graph_legend.html  index-msg.html  index.html
docs/html/action/: Coverage.html  Empty.html  PickAndPlace.html  Target.html  TaskAllocation.html  Tracking.html
docs/html/msg/: AreaDivisionEvent.html  ArrayOfPositions.html  ArrayOfStates.html  ArrayOfVectors.html  CartKnownEvent.html  NewCartEvent.html  Position.html  StateEvent.html  TargetPositionEvent.html  TargetTracking.html  TaskAllocatedEvent.html  TaskAllocationEvent.html  Vector.html  VectorStamped.html  Velocity.html
docs/html/srv/: ClearOfObstacles.html  ClosestBound.html  Danger.html  FixToPose.html  GetArea.html  GetDouble.html  GetGpsFix.html  GetGpsOrigin.html  GetOrigin.html  GetPoint.html  GetPoints.html  GetSector.html  GetVector.html  GetWaypoint.html  NedToEnu.html  OutOfBounds.html  PoseToFix.html  clear_of_obstacles.html  ned_to_enu.html  pose_to_fix.html
msg/: AreaDivisionEvent.msg  AreaModificationEvent.msg  ArrayOf3dVectors.msg  ArrayOfBatteries.msg  ArrayOfPositions.msg  ArrayOfStates.msg  ArrayOfVectors.msg  BatteryState.msg  BatteryStateEvent.msg  BooleanEvent.msg  CartKnownEvent.msg  CurrentState.msg  GlobalTargetPositionEvent.msg  LocalPosition.msg  LocalTargetAssignedEvent.msg  LocalTargetPositionEvent.msg  NewCartEvent.msg  NewPlacePose.msg  NewPlacePoses.msg  PickAndPlaceMsg.msg  PointArrayEvent.msg  PointArrayStateEvent.msg  PointMultiArrayEvent.msg  Position.msg  StateEvent.msg  TargetAssignedEvent.msg  TargetAssignmentEvent.msg  TargetGlobalPositionEvent.msg  TargetHelp.msg  TargetPositionEvent.msg  TargetTrackedBy.msg  TargetTracking.msg  TaskAllocatedEvent.msg  TaskAllocationEvent.msg  TaskOrganizationEvent.msg  Vector.msg  Vector3d.msg  Vector3dStamped.msg  VectorStamped.msg  Velocity.msg
srv/: GeoToPose.srv  GetDist.srv  GetGpsFix.srv  GetMap.srv  GetMultiPoints.srv  GetPoint.srv  GetPoints.srv  GetVector.srv  GetWaypoint.srv  PoseToGeo.srv  SetRoiState.srv
srv/area/: ClosestBound.srv  GetArea.srv  GetOrigin.srv  out_of_bounds.srv
srv/gps/: GetGpsOrigin.srv  fix_to_pose.srv  ned_to_enu.srv  pose_to_fix.srv
srv/obstacle/: clear_of_obstacles.srv  danger.srv  get_occupied_sector.srv
srv/path/: GetWaypoint.srv
