<?xml version="1.0"?>
<package format="2">
	<name>cpswarm_msgs</name>
	<version>1.0.0</version>
	<description>Common messages required by the CPSwarm Behavior Library.</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="prato@ismb.it">Gianluca Prato</maintainer>
    <maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>Apache License 2.0</license>

	<!-- Url tags are optional, but multiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/mavros_pos_controller</url> -->

	<!-- Author tags are optional, multiple are allowed, one per tag -->
	<!-- Authors do not have to be maintainers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

    <buildtool_depend>catkin</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>swarmros</depend>

    <build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>
	
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
